feat: improve SEO

--- a/about.html
+++ b/about.html
@@ -11,9 +11,28 @@
 
         gtag('config', 'G-4TVK733BFR');
     </script>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>About Tapestral</title>
+    <title>About Us – Tapestral</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="Learn more about Tapestral’s mission, vision, and the team building a better way for interior designers to source products directly from trusted vendors.">
+    <meta name="keywords" content="About Tapestral, interior design platform, design sourcing, our mission, design startup">
+    <meta name="author" content="Tapestral">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://tapestral.com/about.html">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="About Us – Tapestral">
+    <meta property="og:description" content="We’re building a better sourcing experience for interior designers. Get to know our vision and values.">
+    <meta property="og:url" content="https://tapestral.com/about.html">
+    <meta property="og:image" content="https://tapestral.com/images/tapestral_header.png">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="About Us – Tapestral">
+    <meta name="twitter:description" content="We’re building a better sourcing experience for interior designers.">
+    <meta name="twitter:image" content="https://tapestral.com/images/tapestral_header.png">
     <style>
         body {
             font-family: 'Inter', sans-serif;
