--- a/become-a-vendor.html
+++ b/become-a-vendor.html
@@ -10,9 +10,28 @@
         gtag('js', new Date());
         gtag('config', 'G-4TVK733BFR');
     </script>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Become a Vendor – Tapestral</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="Apply to become a vendor on Tapestral and sell directly to interior designers. Gain visibility and streamline your sales process.">
+    <meta name="keywords" content="become a vendor, Tapestral vendor application, sell to interior designers, design marketplace, vendor sign up">
+    <meta name="author" content="Tapestral">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://tapestral.com/become-a-vendor.html">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Become a Vendor – Tapestral">
+    <meta property="og:description" content="Join Tapestral as a vendor and connect directly with professional interior designers.">
+    <meta property="og:url" content="https://tapestral.com/become-a-vendor.html">
+    <meta property="og:image" content="https://tapestral.com/images/tapestral_header.png">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Become a Vendor – Tapestral">
+    <meta name="twitter:description" content="Tapestral lets vendors reach interior designers directly. Join today.">
+    <meta name="twitter:image" content="https://tapestral.com/images/tapestral_header.png">
 
     <style>
         body {
