--- a/designer-access.html
+++ b/designer-access.html
@@ -10,9 +10,27 @@
         gtag('js', new Date());
         gtag('config', 'G-4TVK733BFR');
     </script>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Designer Request Access – Tapestral</title>
+    <title>Request Designer Access – Tapestral</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description" content="Interior designers can request early access to Tapestral, the new sourcing platform that offers direct vendor access and exclusive pricing.">
+    <meta name="author" content="Tapestral">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://tapestral.com/designer-access.html">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Request Designer Access – Tapestral">
+    <meta property="og:description" content="Join the waitlist to get exclusive access to Tapestral. Simplify sourcing and get direct vendor pricing.">
+    <meta property="og:url" content="https://tapestral.com/designer-access.html">
+    <meta property="og:image" content="https://tapestral.com/images/tapestral_header.png">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Request Designer Access – Tapestral">
+    <meta name="twitter:description" content="Get early access to the Tapestral platform built for interior designers.">
+    <meta name="twitter:image" content="https://tapestral.com/images/tapestral_header.png">
 
     <style>
         body {
