--- a/index.html
+++ b/index.html
@@ -14,7 +14,44 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tapestral – Coming Soon</title>
+
+
+    <!-- Primary Meta Tags -->
+    <title>Furniture for Interior Designers - Tapestral</title>
+    <meta name="title" content="Furniture for Interior Designers - Tapestral">
+    <meta name="description" content="Tapestral is a sourcing platform built for interior designers. Purchase directly from trusted vendors, get designer pricing, and simplify your workflow. Launching soon!">
+    <meta name="author" content="Tapestral">
+    <meta name="robots" content="index, follow">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://www.tapestral.com/">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.tapestral.com/">
+    <meta property="og:title" content="Furniture for Interior Designers - Tapestral">
+    <meta property="og:description" content="We’re crafting a better way for interior designers to source products directly from their favorite vendors. Request early access today.">
+    <meta property="og:image" content="https://www.tapestral.com/images/tapestral_header.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.tapestral.com/">
+    <meta property="twitter:title" content="Furniture for Interior Designers - Tapestral">
+    <meta property="twitter:description" content="A better way for interior designers to purchase from vendors. Tapestral is launching soon.">
+    <meta property="twitter:image" content="https://www.tapestral.com/images/tapestral_header.png">
+
+    <!-- Structured Data / Schema.org -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Tapestral",
+        "url": "https://www.tapestral.com/",
+        "logo": "https://www.tapestral.com/images/tapestral_header.png",
+        "description": "A platform for interior designers to purchase directly from vendors and simplify sourcing.",
+        "sameAs": []
+    }
+    </script>
 
     <style>
         body {
