--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -11,9 +11,30 @@
 
     gtag('config', 'G-4TVK733BFR');
   </script>
+  <title>Terms of Service – Tapestral</title>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tapestral – Terms of Service</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <meta name="description"
+    content="Read the terms and conditions for using the Tapestral platform as a designer or vendor.">
+  <meta name="keywords" content="Tapestral terms, terms of service, user agreement, vendor agreement, legal policy">
+  <meta name="author" content="Tapestral">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://tapestral.com/terms-of-service.html">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Terms of Service – Tapestral">
+  <meta property="og:description" content="Please review our terms of service before using the Tapestral platform.">
+  <meta property="og:url" content="https://tapestral.com/terms-of-service.html">
+  <meta property="og:image" content="https://tapestral.com/images/tapestral_header.png">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Terms of Service – Tapestral">
+  <meta name="twitter:description" content="Review the legal terms and agreements for Tapestral users.">
+  <meta name="twitter:image" content="https://tapestral.com/images/tapestral_header.png">
+  
   <style>
     body {
       font-family: 'Inter', sans-serif;
