--- a/become-a-vendor.html
+++ b/become-a-vendor.html
@@ -17,7 +17,7 @@
     <meta name="description" content="Apply to become a vendor on Tapestral and sell directly to interior designers. Gain visibility and streamline your sales process.">
     <meta name="keywords" content="become a vendor, Tapestral vendor application, sell to interior designers, design marketplace, vendor sign up">
     <meta name="author" content="Tapestral">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="all">
     <link rel="canonical" href="https://tapestral.com/become-a-vendor.html">
 
     <!-- Open Graph -->
