--- a/designer-access.html
+++ b/designer-access.html
@@ -16,7 +16,7 @@
 
     <meta name="description" content="Interior designers can request early access to Tapestral, the new sourcing platform that offers direct vendor access and exclusive pricing.">
     <meta name="author" content="Tapestral">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="all">
     <link rel="canonical" href="https://tapestral.com/designer-access.html">
 
     <!-- Open Graph -->
