--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
     <meta name="description" content="Learn more about Tapestral’s mission, vision, and the team building a better way for interior designers to source products directly from trusted vendors.">
     <meta name="keywords" content="About Tapestral, interior design platform, design sourcing, our mission, design startup">
     <meta name="author" content="Tapestral">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="all">
     <link rel="canonical" href="https://tapestral.com/about.html">
 
     <!-- Open Graph -->
