--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="title" content="Furniture for Interior Designers - Tapestral">
     <meta name="description" content="Tapestral is a sourcing platform built for interior designers. Purchase directly from trusted vendors, get designer pricing, and simplify your workflow. Launching soon!">
     <meta name="author" content="Tapestral">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="all">
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://www.tapestral.com/">
