--- a/terms-of-service.html
+++ b/terms-of-service.html
@@ -19,7 +19,7 @@
     content="Read the terms and conditions for using the Tapestral platform as a designer or vendor.">
   <meta name="keywords" content="Tapestral terms, terms of service, user agreement, vendor agreement, legal policy">
   <meta name="author" content="Tapestral">
-  <meta name="robots" content="index, follow">
+  <meta name="robots" content="all">
   <link rel="canonical" href="https://tapestral.com/terms-of-service.html">
 
   <!-- Open Graph -->
@@ -34,7 +34,7 @@
   <meta name="twitter:title" content="Terms of Service – Tapestral">
   <meta name="twitter:description" content="Review the legal terms and agreements for Tapestral users.">
   <meta name="twitter:image" content="https://tapestral.com/images/tapestral_header.png">
-  
+
   <style>
     body {
       font-family: 'Inter', sans-serif;
