fix: SEO call outs

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta name="robots" content="all">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://www.tapestral.com/">
+    <link rel="canonical" href="https://www.tapestral.com/index.html">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -371,13 +371,13 @@
 
         <main>
             <section style="padding: 4rem; text-align: center;">
-                <h1>Access is Coming Soon</h1>
+                <h2>Coming Soon</h2>
                 <p>We’re crafting a better way for interior designers to source products directly from their favorite
-                    vendors. Stay tuned for launch updates.</p>
+                    vendors. Stay tuned for launch updates on Tapestral.</p>
             </section>
 
             <section style="padding: 4rem 2rem; text-align: center;">
-                <h1 style="margin-bottom: 2rem;">Key Features</h1>
+                <h2 style="margin-bottom: 2rem;">Key Features</h2>
                 <div class="features">
                     <div class="feature-card">
                         <h3>Designer Pricing</h3>
