--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://www.tapestral.com/index.html">
+    <link rel="icon" href="https://www.tapestral.com/images/favicon.ico">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
